src/main/java/org/example/utils/error/ValidationPizzaException.java
package org.example.utils.error;

public class ValidationPizzaException extends RuntimeException {
    public ValidationPizzaException(Throwable cause) {
        super(cause);
    }
}
